@@ -1,5 +1,10 @@
 2002-01-12  Fumitoshi UKAI  <ukai@debian.or.jp>
 
+	* [w3m-dev 02827]
+	* scripts/Makefile: use sed instead of /bin/sh while read; echo loop
+
+2002-01-12  Fumitoshi UKAI  <ukai@debian.or.jp>
+
 	* [w3m-dev 02823]
 	* scripts/Makefile: don't use read -r 
 			because Solaris 8 for x86 doesn't work
